--- a/config.ini
+++ b/config.ini
@@ -1,21 +1,23 @@
 # FlowlineMassCon.py configuration file
 [path]
 # data file path
-dat_path = ../massCon/ruth/data/
+dat_path = /path/to/data/
 # x and y vertex coordinate arrays output by GenFlowlines.m
 verts_x = verts_x.csv
 verts_y = verts_y.csv
 # x and y component velocity rasters
-vx = ALA_G0120_0000_vx_clip.tif
-vy = ALA_G0120_0000_vy_clip.tif
+vx = vx.tif
+vy = by.tif
 # digital elevation model
-dem = ifsar_ruth.tif
+dem = dem_name.tif
 # thickness measurements
-rdata = amp_picks.gpkg
+rdata = thickness.gpkg
 # output file name
 out_name = pcloud.csv
 
 [param]
+# factor relating surface velocity to depth-averagedvelocity
+gamma = 0.8
 # mass balance gradient (mm w.e./m)
 mb = 4
 # equilibrium line altitude (m)
