--- a/config.ini
+++ b/config.ini
@@ -7,16 +7,16 @@ verts_x = verts_x.csv
 verts_y = verts_y.csv
 # x and y component velocity rasters
 vx = vx.tif
-vy = by.tif
+vy = vy.tif
 # digital elevation model
-dem = dem_name.tif
+dem = dem.tif
 # thickness measurements
 rdata = thickness.gpkg
 # output file name
 out_name = pcloud.csv
 
 [param]
-# factor relating surface velocity to depth-averagedvelocity
+# factor relating surface velocity to depth-averaged velocity
 gamma = 0.8
 # mass balance gradient (mm w.e./m)
 mb = 4
