--- a/config.ini
+++ b/config.ini
@@ -1,17 +1,17 @@
 # FlowlineMassCon.py configuration file
 [path]
 # data file path
-dat_path = /path/to/data/
+dat_path = /zippy/MARS/targ/modl/mass_con/ruth/data/
 # x and y vertex coordinate arrays output by GenFlowlines.m
 verts_x = verts_x.csv
 verts_y = verts_y.csv
 # x and y component velocity rasters
-vx = vx.tif
-vy = vy.tif
+vx = ALA_G0120_0000_vx_clip.tif
+vy = ALA_G0120_0000_vy_clip.tif
 # digital elevation model
-dem = dem.tif
+dem = ifsar_ruth.tif
 # thickness measurements
-rdata = thickness.gpkg
+rdata = amp_picks.gpkg
 # output file name
 out_name = pcloud.csv
 
