--- a/config.ini
+++ b/config.ini
@@ -1,28 +1,26 @@
 # FlowlineMassCon.py configuration file
 [path]
 # data file path
-dat_path = /path/to/data/
+dat_path = /Users/btober/Drive/work/ruth/mass_con/data/
 # x and y vertex coordinate arrays output by GenFlowlines.m
-verts_x = verts_x.csv
-verts_y = verts_y.csv
+verts_x = sensitivity/5_seeds/verts_x.csv
+verts_y = sensitivity/5_seeds/verts_y.csv
 # x and y component velocity rasters
-vx = vx.tif
-vy = vy.tif
+vx = ALA_G0120_0000_vx_clip.tif
+vy = ALA_G0120_0000_vy_clip.tif
 # digital elevation model
-dem = dem.tif
+dem = ifsar_ruth.tif
 # thickness measurements
-rdata = thickness.gpkg
+rdata = amp_gate.gpkg
 # output file name
 out_name = pcloud.csv
 
 [param]
 # factor relating surface velocity to depth-averaged velocity
-gamma = 0.8
+gamma = 0.9
 # mass balance gradient (mm w.e./m)
-mb = 4
+mb = 6
 # equilibrium line altitude (m)
-ela = 1300
+ela = 1530
 # surface elevation change rate (m/yr)
-dhdt = -.5
-# plot results
-plot = False
+dhdt = -1.0
