output stats dictionary of model v. observed thickness

--- a/config.ini
+++ b/config.ini
@@ -10,10 +10,12 @@ vx = ALA_G0120_0000_vx_clip.tif
 vy = ALA_G0120_0000_vy_clip.tif
 # digital elevation model
 dem = ifsar_ruth.tif
-# thickness measurements
-rdata = amp_gate.gpkg
-# output file name
-out_name = pcloud.csv
+# thickness measurements for statistically comparing modeled and observed thickness (all available measurements)
+rdata_all = None
+# thickness measurements for constraining flux in a given flowband - essentailly a flux gate (likely a subset of rdata_all)
+rdata_gate = amp_gate.gpkg
+# output file name (no file extensions)
+out_name = out
 
 [param]
 # factor relating surface velocity to depth-averaged velocity
@@ -24,3 +26,7 @@ mb = 6
 ela = 1530
 # surface elevation change rate (m/yr)
 dhdt = -1.0
+# export gridded results
+grid = True
+# spatial resolution for gridded results (m; pixel size will be m^2)
+gridres = 100
