add mask path to config

--- a/config.ini
+++ b/config.ini
@@ -14,6 +14,8 @@ dem = ifsar_ruth.tif
 rdata_all = None
 # thickness measurements for constraining flux in a given flowband - essentailly a flux gate (likely a subset of rdata_all)
 rdata_gate = amp_gate.gpkg
+# csv file containing glacier outline mask used in gridding (csv file of x,y coordinate pairs comprising glacier outline)
+outline = mask.csv
 # output file name (no file extensions)
 out_name = out
 
